[metadata]
name = dynamic_listing
description = Django package provides easy way to create listing, filters, and charts.
long_description_content_type = text/markdown
url = https://github.com/seanh/gha-python-packaging-demo
project_urls =
    Bug Tracker = https://github.com/seanh/gha-python-packaging-demo/issues
    Changelog = https://github.com/seanh/gha-python-packaging-demo/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    gha_python_packaging_demo = gha_python_packaging_demo.app:entry_point